# RAGchat

./: .gitignore  1_🏠_HomePage.py  README.md  pyproject.toml
config/: __init__.py  app_config.py  config.json  providers_config.py
document-rag-chat/: app.py  pyproject.toml  run.py
document-rag-chat/pages/: 1_database_management.py  1_test_ollama.py  2_document_qa.py
documents/: testme-nyc.txt  testme.txt
pages/: 1_📚_RAG_DBs_Manager.py  2_💬_RAG_Ask_ODSP.py
utils/: db_manager_utils.py  db_utils.py  embedding_utils.py  text_utils.py
